# hft_school_liquidation_task

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/docs/: architecture.md  data-and-conventions.md  features.md  findings.md  roadmap.md  workflows-and-gotchas.md
notebooks/: 01_exploration.ipynb  02_feature_selection.ipynb
scripts/: analyze_feature_sets.py  build_feature_selection_nb.py  build_flow_grid.py  build_panel.py  build_report.py  compute_baselines.py  evaluate.py  patch_lightgbm.py  regime_diagnostic.py  run_study.py  select_features.py  train_model.py  walk_forward.py
scripts/eda/: build_notebook.py  precompute_aggregates.py  precompute_cascades.py  precompute_events.py
src/liqsignal/: __init__.py  analysis.py  backtest.py  baselines.py  config.py  features.py  io.py  markout.py  model.py  report.py  scoring.py  signal.py  splits.py
tests/: test_backtest.py  test_features.py  test_markout.py  test_model.py  test_scoring.py  test_select_features.py  test_signal.py  test_splits.py  test_threshold.py
